--- a/src/app/page-header/page-header.component.html
+++ b/src/app/page-header/page-header.component.html
@@ -1,7 +1,8 @@
-<h1>
-  Welcome to {{ title }}!
-</h1>
-
-<h2>
-  {{ description }}
-</h2>
+<div class="container">
+  <div class="title">
+    Welcome to {{ title }}!
+  </div>
+  <div class="description">
+    {{ description }}
+  </div>
+</div>
