--- a/src/app/planets-table/planets-table.component.html
+++ b/src/app/planets-table/planets-table.component.html
@@ -17,7 +17,9 @@
         <td>{{ planet.diameter }}</td>
         <td>{{ planet.rotation_period }}</td>
         <td>{{ planet.orbital_period }}</td>
-        <td>{{ planet.terrain }}</td>
+        <td>
+          <ul class="no-padding" *ngFor="let terrain of terrainList(planet.terrain)">{{ terrain }}</ul>
+        </td>
         <td>
           <ul class="no-padding" *ngFor="let film of findFilmName(planet.films)">{{ film }}</ul>
         </td>
