--- a/src/app/planets-table/planets-table.component.html
+++ b/src/app/planets-table/planets-table.component.html
@@ -11,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let planet of (planets$ | async)?.results">
+      <tr *ngFor="let planet of planets">
         <td>{{ planet.name }}</td>
         <td>{{ (planet.population === 'unknown') ? 'Unknown' : (planet.population | number) }}</td>
         <td>{{ planet.diameter | number }}</td>
