--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-page-header></app-page-header>
-<app-planets-table [planets]="(planets$ | async)?.results"></app-planets-table>
+<app-planets-table
+  [planets]="(planets$ | async)?.results"
+  [films]="films"
+>
+</app-planets-table>
