style: show pagination buttons are selectable

--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -1,9 +1,9 @@
 <div class="pagination">
-  <span class="pagination-button edge-button">First</span>
-  <span class="pagination-button glyphicon glyphicon-triangle-left"></span>
+  <span class="selectable pagination-button edge-button">First</span>
+  <span class="selectable pagination-button glyphicon glyphicon-triangle-left"></span>
   <span class="current-page pagination-button">{{ currentPage }}</span>
-  <span class="pagination-button">{{ currentPage + 1 }}</span>
+  <span class="selectable pagination-button">{{ currentPage + 1 }}</span>
   <span class="pagination-button">...</span>
-  <span class="pagination-button glyphicon glyphicon-triangle-right"></span>
-  <span class="pagination-button edge-button">Last</span>
+  <span class="selectable pagination-button glyphicon glyphicon-triangle-right"></span>
+  <span class="selectable pagination-button edge-button">Last</span>
 </div>
