--- a/src/app/pagination/pagination.component.sass
+++ b/src/app/pagination/pagination.component.sass
@@ -8,9 +8,11 @@
 .pagination-button
   padding: 0px 10px
 
-.glyphicon
-  top: 3px
-
 .current-page
-  background-color: lightgrey
+  background-color: gainsboro
   border-radius: 100%
+
+span.selectable:hover
+  background-color: lightslategray
+  border-radius: 100%
+  cursor: pointer
