feat: add ability to navigate to next page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,5 @@
   [itemsCount]="itemsCount"
   [itemsPerPage]="itemsPerPage"
   [currentPage]="currentPage"
+  (changePage)="getPlanets($event)"
 ></app-pagination>
