--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -2,7 +2,7 @@
   <span class="selectable pagination-button edge-button">First</span>
   <span class="selectable pagination-button glyphicon glyphicon-triangle-left"></span>
   <span class="current-page pagination-button">{{ currentPage }}</span>
-  <span class="selectable pagination-button">{{ currentPage + 1 }}</span>
+  <span class="selectable pagination-button" (click)="goTo(currentPage + 1)">{{ currentPage + 1 }}</span>
   <span class="pagination-button">...</span>
   <span class="selectable pagination-button glyphicon glyphicon-triangle-right"></span>
   <span class="selectable pagination-button edge-button">Last</span>
