--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-page-header></app-page-header>
-<app-search-bar></app-search-bar>
+<app-search-bar (searchTerm)="getPlanet($event)"></app-search-bar>
 <app-planets-table
   [planets]="planets.results"
   [films]="films">
