--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,6 +1,6 @@
 <div class="search-component">
   <div class="search-group">
     <i class="glyphicon glyphicon-search"></i>
-    <input class="search-input" type="text" placeholder="Search">
+    <input (keyup)="search($event.srcElement.value)" class="search-input" type="text" placeholder="Search">
   </div>
-  </div>
+</div>
