feat: determine sort direction on the fly

--- a/src/app/planets-table/planets-table.component.html
+++ b/src/app/planets-table/planets-table.component.html
@@ -2,8 +2,8 @@
     <thead class="thead-dark">
       <tr>
         <th scope="col" class="sortable" (click)="sortBy('name')">Name</th>
-        <th scope="col" class="sortable">Population</th>
-        <th scope="col" class="sortable">Diameter</th>
+        <th scope="col" class="sortable" (click)="sortBy('population')">Population</th>
+        <th scope="col" class="sortable" (click)="sortBy('diameter')">Diameter</th>
         <th scope="col" class="sortable">Rotation Period</th>
         <th scope="col" class="sortable">Orbital Period</th>
         <th scope="col" class="non-sortable">Terrain</th>
