feat: sortable by remaining categories

--- a/src/app/planets-table/planets-table.component.html
+++ b/src/app/planets-table/planets-table.component.html
@@ -4,8 +4,8 @@
         <th scope="col" class="sortable" (click)="sortBy('name')">Name</th>
         <th scope="col" class="sortable" (click)="sortBy('population')">Population</th>
         <th scope="col" class="sortable" (click)="sortBy('diameter')">Diameter</th>
-        <th scope="col" class="sortable">Rotation Period</th>
-        <th scope="col" class="sortable">Orbital Period</th>
+        <th scope="col" class="sortable" (click)="sortBy('rotation_period')">Rotation Period</th>
+        <th scope="col" class="sortable" (click)="sortBy('orbital_period')">Orbital Period</th>
         <th scope="col" class="non-sortable">Terrain</th>
         <th scope="col" class="non-sortable">Films</th>
       </tr>
