--- a/src/app/planets-table/planets-table.component.html
+++ b/src/app/planets-table/planets-table.component.html
@@ -13,10 +13,10 @@
     <tbody>
       <tr *ngFor="let planet of planets">
         <td>{{ planet.name }}</td>
-        <td>{{ (['unknown', -1].includes(planet.population)) ? 'Unknown' : (planet.population | number) }}</td>
-        <td>{{ ['unknown', -1].includes(planet.diameter) ? 'Unknown' : (planet.diameter | number) }}</td>
-        <td>{{ ['unknown', -1].includes(planet.rotation_period) ? 'Unknown' : (planet.rotation_period | number) }}</td>
-        <td>{{ ['unknown', -1].includes(planet.orbital_period) ? 'Unknown' : (planet.orbital_period | number) }}</td>
+        <td>{{ unknown(planet.population) ? 'Unknown' : (planet.population | number) }}</td>
+        <td>{{ unknown(planet.diameter) ? 'Unknown' : (planet.diameter | number) }}</td>
+        <td>{{ unknown(planet.rotation_period) ? 'Unknown' : (planet.rotation_period | number) }}</td>
+        <td>{{ unknown(planet.orbital_period) ? 'Unknown' : (planet.orbital_period | number) }}</td>
         <td>
           <ul class="no-padding" *ngFor="let terrain of terrainList(planet.terrain)">{{ terrain }}</ul>
         </td>
