--- a/src/app/page-header/page-header.component.html
+++ b/src/app/page-header/page-header.component.html
@@ -1,6 +1,6 @@
 <div class="page-header center">
   <div class="title">
-    Welcome to {{ title }}!
+    {{ title }}
   </div>
   <div class="description">
     {{ description }}
