--- a/src/app/components/page-header/page-header.component.sass
+++ b/src/app/components/page-header/page-header.component.sass
@@ -2,6 +2,7 @@
   background-color: black
   color: white
   min-height: 150px
+  margin: 0
 
 .center
   display: flex
@@ -9,9 +10,9 @@
   justify-content: center
   flex-flow: column
 
-  .title
-    text-transform: uppercase
-    font-size: 30px
+.title
+  text-transform: uppercase
+  font-size: 30px
 
-  .description
-    font-size: 15px
+.description
+  font-size: 15px
