--- a/src/app/components/pagination/pagination.component.sass
+++ b/src/app/components/pagination/pagination.component.sass
@@ -1,19 +1,24 @@
+@import '../../variables.sass';
+
 .pagination
   display: flex
   float: right
   cursor: default
+  height: 45px
+  align-items: center
+  margin-top: 0px
 
 .edge-button
   margin: 0px 20px
 
 .pagination-button
-  padding: 0px 10px
+  padding: 4px 10px
 
 .current-page
   background-color: gainsboro
   border-radius: 100%
 
-span.selectable:hover
-  background-color: lightslategray
+div.selectable:hover
+  background-color: $blue-grey
   border-radius: 100%
   cursor: pointer
