change Search Bar placeholder text

--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -6,6 +6,6 @@
       (keydown)="resetTypingTimer()"
       class="search-input"
       type="text"
-      placeholder="Search">
+      placeholder="Search by planet name">
   </div>
 </div>
